--- a/1-10.html
+++ b/1-10.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  
   <link rel="stylesheet" href="1-10.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>1-9-2</title>
+  <title>1-10</title>
 </head>
 <body>
   <!-- header -->
